--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "feather-icons-react": "^0.7.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-svg": "^16.1.34"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
