--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "feather-icons-react": "^0.7.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
