--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-svg": "^16.1.34"
   },
   "devDependencies": {
@@ -33,6 +34,8 @@
     "vite": "^5.1.6"
   },
   "prettier": {
-    "plugins": ["prettier-plugin-tailwindcss"]
+    "plugins": [
+      "prettier-plugin-tailwindcss"
+    ]
   }
 }
