--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.23.1",
     "react-svg": "^16.1.34"
   },
